--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "10.4.14",
     "next": "13.4.2",
     "postcss": "8.4.23",
